--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
-      "use": "@whakati/vercel-sapper"
+      "src": "package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "index.js"
+      "dest": "/index.js"
     }
   ]
 }
